# cluu

./: .gitattributes  .gitignore  .gitmodules  CONTEXT.md  FSITEM_STATUS.md  IO_WAIT_GUIDE.md  LICENSE  Makefile  README.md  VFS_MOUNTS.md
kernel/: Cargo.toml  Makefile  cluu-kernel-rust.x86_64.elf  link.ld
kernel/.cargo/: config.toml
kernel/src/: bootboot.rs  initrd.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  mod.rs
kernel/src/components/: tty.rs
kernel/src/devices/: mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/display/: framebuffer.rs  mod.rs
kernel/src/drivers/input/: keyboard.rs  (+1 more)
kernel/src/fs/: mod.rs  tar.rs
kernel/src/io/: device.rs  fd.rs  mod.rs  pio.rs  tty_device.rs  vfs_file.rs
kernel/src/ipc/: mod.rs  port.rs
kernel/src/loaders/: elf.rs  mod.rs
kernel/src/memory/: address_space.rs  heap.rs  mod.rs  paging.rs  phys.rs  physmap.rs  types.rs
kernel/src/peripherals/: mod.rs  serial.rs  uart_16550.rs
kernel/src/scheduler/: context.rs  events.rs  io_wait.rs  ipc.rs  mod.rs  process.rs  sched_core.rs  scheduler.rs  scheduler_manager.rs  shmem.rs  thread.rs  traits.rs  types.rs
kernel/src/shmem/: mod.rs
kernel/src/syscall/: handlers.rs  io.rs  mod.rs  numbers.rs  pio.rs
kernel/src/tests/: comprehensive.rs  elf_loader.rs  mod.rs  syscall_direct.rs  syscall_stress.rs  syscall_tests.rs  userspace_hello.rs
kernel/src/utils/: console.rs  line_editor.rs  logger.rs  macros.rs  mod.rs  shell.rs  timer.rs  writer.rs
kernel/src/vfs/: mod.rs  protocol.rs
kernel/triplets/: cluu-x86-64.json  cluu-x86.json
(+171 files in other folders)
