# CLUU Kernel Cargo Configuration
#
# This file defines the build configuration for the CLUU microkernel written in Rust.
# It specifies dependencies, build settings, and compiler options necessary for
# bare-metal kernel development.
#
# Why this is important:
# - Defines all external crates needed for kernel functionality
# - Sets panic behavior to "abort" (essential for kernel - no unwinding)
# - Specifies Rust 2024 edition for latest language features
# - Includes low-level crates for x86_64 architecture support
# - Provides synchronization primitives (spin locks) for kernel use
# - Includes logging infrastructure for debugging

[package]
name = "cluu-kernel-rust"
version = "0.0.1"
authors = ["Balazs Valkony"]
edition = "2024"

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
spin = "0.10.0"
x86 = "0.52.0"
x86_64 = "0.15.4"
bitflags = "2.10.0"
log = "0.4.29"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
volatile = "0.6"
pic8259 = "0.11"                                                                                                                                                                                              
pc-keyboard = "0.7"                                                                                                                                                                                           
linked_list_allocator = "0.10"
heapless = "0.8"
